projeto-blog/Projeto-blog/back-end/liblog/src/main/java/com/example/liblog/error/exception/DuplicateException.java
package com.example.liblog.error.exception;

import lombok.Data;

public class DuplicateException extends RuntimeException{
    public DuplicateException(String message) {
        super(message);}
}
